// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewBoxForm component matches snapshot 1`] = `
<DocumentFragment>
  <form>
    <div>
      <label
        for="width"
      >
        Width:
      </label>
      <input
        id="width"
        name="width"
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        for="height"
      >
        Height:
      </label>
      <input
        id="height"
        name="height"
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        for="backgroundColor"
      >
        Background Color:
      </label>
      <input
        id="backgroundColor"
        name="backgroundColor"
        type="text"
        value=""
      />
    </div>
    <button
      type="submit"
    >
      Add Box
    </button>
  </form>
</DocumentFragment>
`;

exports[`matches snapshot for NewBoxForm component 1`] = `
<div>
  <form>
    <div>
      <label
        for="width"
      >
        Width:
      </label>
      <input
        id="width"
        name="width"
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        for="height"
      >
        Height:
      </label>
      <input
        id="height"
        name="height"
        type="text"
        value=""
      />
    </div>
    <div>
      <label
        for="backgroundColor"
      >
        Background Color:
      </label>
      <input
        id="backgroundColor"
        name="backgroundColor"
        type="text"
        value=""
      />
    </div>
    <button
      type="submit"
    >
      Add Box
    </button>
  </form>
</div>
`;
